# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
postgres-data/base/1/: 2619  2658  2663  2838  3085  3455
postgres-data/base/13066/: 12907  2618  2662  2673  2674  2675  2704
postgres-data/base/13067/: 1247  1249  1259  1259_vm  16384  16386  16392  16393  16395  16397  16401  16403  16405  16407  16411  16413  16419  16421  16423  16429  16431  16433  16437  16439  16441  16447  16449  16457  16464  16465  16466  16478  16479  16480  16481  16493  16494  16495  16507  16508  (+55 more)
postgres-data/global/: 1214  1214_vm  1232  1233  1260  1260_vm  1262  2671  2672  2676  2677  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13067.stat  global.stat
women/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
women/migrations/: 0001_initial.py
women_in_stem/: asgi.py  settings.py  urls.py  wsgi.py
